--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Arnold Myint&#39;s Git</h1>
-      <h2 class="project-tagline">Website from Git</h2>
+      <h1 class="project-name">“Welcome to the Arnold’s homepage!”</h1>
+      <h2 class="project-tagline">Website using Git</h2>
     </section>
 
     <section class="main-content">
