--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <h1 class="project-name">“Welcome to the Arnold’s homepage!”</h1>
       <h2 class="project-tagline">Website using Git</h2>
       <h5 class="projec-tagline">This is Nathan Barber, the bluejay screeches by moonlight.</h5>
+      <h5 class="projec-tagline">This is Nathan Barber, the bluejay screeches by moonlight.</h5>
     </section>
 
     <section class="main-content">
