add my name on the index.html
pleas approve it.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <h2 class="project-tagline">Website using Git</h2>
       <h2 class="projec-tagline">This is Nathan Barber, the bluejay screeches by moonlight.</h2>
       <h5 class="projec-tagline">This is Nathan Barber, the bluejay screeches by moonlight.</h5>
+      <h5 class="projec-tagline">This is Jayden Liang</h5>
     </section>
 
     <section class="main-content">
