--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <h1 class="project-name">“Welcome to the Arnold’s homepage!”</h1>
       <h2 class="project-tagline">Website using Git</h2>
       <h2 class="projec-tagline">This is Nathan Barber, the bluejay screeches by moonlight.</h2>
-      <h5 class="projec-tagline">This is Nathan Barber, the bluejay screeches by moonlight.</h5>
-      <h5 class="projec-tagline">This is Jayden Liang</h5>
-      <h1 class="projec-tagline">This is probably Darren Chan.</h1>
+      <h2 class="projec-tagline">This is Jayden Liang</h2>
+      <h2 class="projec-tagline">This is probably Darren Chan.</h2>
+      <h2 class="projec-tagline">We did it.</h2>
     </section>
 
     <section class="main-content">
